--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.14.6",
+		"bootstrap": "^5.1.0",
 		"express": "^4.17.1",
 		"helmet": "^4.6.0",
 		"morgan": "^1.10.0",
@@ -76,5 +77,5 @@
 	"engines": {
 		"node": "^16",
 		"npm": "^7"
-	}	  
+	}
 }
