--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 	"dependencies": {
 		"@babel/runtime": "^7.14.6",
 		"bootstrap": "^5.1.0",
+		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"helmet": "^4.6.0",
 		"morgan": "^1.10.0",
