Linting issues sorted out

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,9 @@
 	"extends": ["@codeyourfuture/standard"],
 	"parser": "babel-eslint",
 	"rules": {
+		"linebreak-style": 0,
+		"global-require": 0,
+		"eslint linebreak-style": [0, "error", "windows"],
 		"indent": "off",
 		"operator-linebreak": "off",
 		"quotes": [
