--- a/package.json
+++ b/package.json
@@ -68,12 +68,16 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.14.6",
+		"bcrypt": "^5.0.1",
 		"bootstrap": "^5.1.0",
+		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"helmet": "^4.6.0",
+		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
-		"pg": "^8.6.0"
+		"pg": "^8.7.1",
+		"uuid": "^3.3.2"
 	},
 	"engines": {
 		"node": "^16",
