--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.14.6",
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
+		"@mui/material": "^5.0.0",
 		"bcrypt": "^5.0.1",
 		"bootstrap": "^5.1.0",
 		"cors": "^2.8.5",
