--- a/package.json
+++ b/package.json
@@ -68,6 +68,9 @@
 	},
 	"dependencies": {
 		"@babel/runtime": "^7.14.6",
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.15",
 		"bcrypt": "^5.0.1",
 		"bootstrap": "^5.1.0",
 		"cors": "^2.8.5",
