--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.1",
+		"react-toastify": "^8.0.3",
 		"uuid": "^3.3.2"
 	},
 	"engines": {
