--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.1",
+		"quill": "^1.3.7",
+		"socket.io": "^4.2.0",
+		"socket.io-client": "^4.2.0",
 		"uuid": "^3.3.2"
 	},
 	"engines": {
