--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
 		"@fortawesome/free-solid-svg-icons": "^5.15.4",
 		"@fortawesome/react-fontawesome": "^0.1.15",
 		"bcrypt": "^5.0.1",
-		"bootstrap": "^5.1.0",
+		"bootstrap": "^5.1.1",
 		"cors": "^2.8.5",
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
@@ -82,6 +82,7 @@
 		"morgan": "^1.10.0",
 		"pg": "^8.7.1",
 		"quill": "^1.3.7",
+		"react-bootstrap": "^2.0.0-rc.0",
 		"react-icons": "^4.3.1",
 		"react-toastify": "^8.0.3",
 		"socket.io": "^4.2.0",
