--- a/package.json
+++ b/package.json
@@ -83,7 +83,9 @@
 		"pg": "^8.7.1",
 		"quill": "^1.3.7",
 		"react-bootstrap": "^2.0.0-rc.0",
+		"react-google-slides": "^3.1.1",
 		"react-icons": "^4.3.1",
+		"react-native-confetti-cannon": "^1.5.2",
 		"react-toastify": "^8.0.3",
 		"socket.io": "^4.2.0",
 		"socket.io-client": "^4.2.0",
