--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.1",
+		"pptxgenjs": "^3.8.0",
 		"quill": "^1.3.7",
 		"react-bootstrap": "^2.0.0-rc.0",
 		"react-google-slides": "^3.1.1",
