--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "starter-kit",
+	"name": "Pitch-Pow",
 	"version": "0.0.1",
-	"description": "Starter kit for full-stack JavaScript projects",
+	"description": "Pitch Pow is a web app that allows students from the University of the Western Cape to create and share pitch deck for new or existing companies by answering a series of questions.",
 	"private": true,
 	"scripts": {
 		"prebuild": "npm run cleanup",
@@ -60,10 +60,10 @@
 		"react-router-dom": "^5.2.0",
 		"rimraf": "^3.0.2",
 		"style-loader": "^3.0.0",
-		"wait-on": "^6.0.0",
+		"wait-on": "^7.2.0",
 		"webpack": "^5.43.0",
 		"webpack-cli": "^4.7.2",
-		"webpack-dev-server": "^3.11.2",
+		"webpack-dev-server": "^4.15.1",
 		"webpack-merge": "^5.8.0"
 	},
 	"dependencies": {
@@ -78,7 +78,7 @@
 		"dotenv": "^10.0.0",
 		"express": "^4.17.1",
 		"helmet": "^4.6.0",
-		"jsonwebtoken": "^8.5.1",
+		"jsonwebtoken": "^9.0.2",
 		"morgan": "^1.10.0",
 		"pg": "^8.7.1",
 		"react-toastify": "^8.0.3",
